// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Property issues Section toString as attribute key does not have any side effects 1`] = `
Object {
  "elements": Array [
    Object {
      "attributes": Array [
        Object {
          "key": "toString",
          "value": "value",
        },
      ],
      "key": "check",
      "type": "field",
    },
  ],
  "key": null,
  "type": "section",
}
`;

exports[`Property issues Section toString as field key does not have any side effects 1`] = `
Object {
  "elements": Array [
    Object {
      "key": "toString",
      "type": "field",
      "value": "value",
    },
  ],
  "key": null,
  "type": "section",
}
`;

exports[`Property issues Section toString as flag key does not have any side effects 1`] = `
Object {
  "elements": Array [
    Object {
      "key": "toString",
      "type": "flag",
    },
  ],
  "key": null,
  "type": "section",
}
`;
